fix: color style for selecting

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 
     ::selection {
         background-color: rgba(130, 238, 253, 0.3);
-        color: #1f2937;
+        color: #eee;
     }
 
     html {
