--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,66 +2,104 @@
 @tailwind components;
 @tailwind utilities;
 
-@Layer base {
-    :root {
-        --navigation-height: 4.8rem;
-    }
+@layer base {
+  :root {
+    --navigation-height: 4.8rem;
+  }
 
-    ::selection {
-        background-color: rgba(130, 238, 253, 0.3);
-        color: #eee;
-    }
+  ::selection {
+    background-color: rgba(130, 238, 253, 0.3);
+    color: #eee;
+  }
 
-    html {
-        @apply:bg-background font-mono text-off-white;
-    }
+  html {
+    @apply:bg-background font-mono text-off-white;
+  }
 }
 
-@Layer utilities {
-    .text-shadow {
-        text-shadow: rgb(0 0 0 / 50%) 0px 3px 12px;
-    }
+@layer utilities {
+  .text-shadow {
+    text-shadow: rgb(0 0 0 / 50%) 0px 3px 12px;
+  }
 
-    .text-gradient {
-        background: linear-gradient(to right bottom, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.38));
-        background-clip: text;
-        color: transparent;
-    }
+  .text-gradient {
+    background: linear-gradient(
+      to right bottom,
+      rgb(255, 255, 255) 30%,
+      rgba(255, 255, 255, 0.38)
+    );
+    background-clip: text;
+    color: transparent;
+  }
 
-    .text-gradient {
-        background: linear-gradient(to right bottom, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.38));
-        background-clip: text;
-        color: transparent;
-      }
-    
-      .mask-radial-faded {
-        mask-image: radial-gradient(circle at center center, black, transparent 80%)
-      }
-    
-      .mask-linear-faded {
-        mask-image: linear-gradient(black, transparent 90%)
-      }
+  .text-gradient {
+    background: linear-gradient(
+      to right bottom,
+      rgb(255, 255, 255) 30%,
+      rgba(255, 255, 255, 0.38)
+    );
+    background-clip: text;
+    color: transparent;
+  }
 
-      .mask-linear-faded-black {
-        mask-image: linear-gradient(white, transparent 50%)
-      }
-    
-      .mask-keyboard {
-        mask-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.57) 33.98%, black 100%);
-      }
-    
-      .mask-shortcutkeys {
-        mask-image: linear-gradient(to right, transparent, black 40%, black calc(60%), transparent 100%);
-      }
+  .mask-radial-faded {
+    mask-image: radial-gradient(
+      circle at center center,
+      black,
+      transparent 80%
+    );
+  }
+
+  .mask-linear-faded {
+    mask-image: linear-gradient(black, transparent 90%);
+  }
+
+  .mask-linear-faded-black {
+    mask-image: linear-gradient(white, transparent 50%);
+  }
+
+  .mask-keyboard {
+    mask-image: linear-gradient(
+      transparent 0%,
+      rgba(0, 0, 0, 0.57) 33.98%,
+      black 100%
+    );
+  }
+
+  .mask-shortcutkeys {
+    mask-image: linear-gradient(
+      to right,
+      transparent,
+      black 40%,
+      black calc(60%),
+      transparent 100%
+    );
+  }
 }
 
 @keyframes gisjuz {
-    from {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-    to {
-        opacity: 1;
-        transform: none;
-    }
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.animate-bounce {
+  animation: bounce 1s infinite;
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
 }
